--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "cookie-parser": "1.4.3",
     "create-react-class": "^15.6.0",
     "dateformat": "2.0.0",
-    "debug": "2.6.0",
     "deep-merge": "1.0.0",
     "director": "1.2.8",
     "ejs": "2.5.5",
@@ -31,7 +30,7 @@
     "immutable": "3.8.1",
     "isomorphic-fetch": "2.2.1",
     "jed": "1.1.1",
-    "lodash": "4.17.4",
+    "lodash": "^4.17.10",
     "morgan": "1.7.0",
     "node-jsx": "0.13.3",
     "node-sass": "^4.9.3",
@@ -66,6 +65,7 @@
     "babel-preset-react": "6.23.0",
     "babel-preset-stage-0": "6.22.0",
     "css-loader": "^1.0.0",
+    "debug": "^3.1.0",
     "gulp": "3.9.1",
     "gulp-clean-css": "2.3.2",
     "gulp-concat": "2.6.1",
