--- a/package.json
+++ b/package.json
@@ -87,9 +87,9 @@
     "react-addons-perf": "^15.4.2",
     "run-sequence": "1.2.2",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "walk": "2.3.9",
+    "webpack-extraneous-file-cleanup-plugin": "^2.0.0",
     "yargs": "6.6.0"
   }
 }
