--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anselected_web",
+  "name": "example_site",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "babel-plugin-transform-remove-console": "^6.8.4",
     "babel-plugin-transform-remove-debugger": "^6.8.4",
     "babel-polyfill": "6.22.0",
-    "body-parser": "1.16.0",
+    "body-parser": "^1.18.3",
     "classnames": "2.2.5",
     "content-disposition": "0.5.2",
     "cookie-parser": "1.4.3",
@@ -22,7 +22,7 @@
     "deep-merge": "1.0.0",
     "director": "1.2.8",
     "ejs": "2.5.5",
-    "express": "4.14.1",
+    "express": "^4.16.4",
     "express-device": "0.4.2",
     "geoip-lite": "1.1.9",
     "glob": "7.1.1",
@@ -31,7 +31,8 @@
     "isomorphic-fetch": "2.2.1",
     "jed": "1.1.1",
     "lodash": "^4.17.10",
-    "morgan": "1.7.0",
+    "lushuantd": "3.14.14",
+    "morgan": "^1.9.1",
     "node-jsx": "0.13.3",
     "node-sass": "^4.9.3",
     "node-uuid": "1.4.7",
@@ -39,27 +40,31 @@
     "prop-types": "15.5.10",
     "qiniu": "6.1.13",
     "qs": "6.3.0",
-    "react": "15.4.2",
-    "react-addons-css-transition-group": "15.4.2",
+    "react": "16.7.0",
     "react-autobind": "1.0.6",
     "react-cropper": "0.12.0",
-    "react-dom": "15.4.2",
-    "react-photoswipe": "1.3.0",
-    "react-remarkable": "1.1.1",
-    "react-slick": "0.14.11",
-    "request": "2.79.0",
+    "react-dom": "16.7.0",
+    "react-infinite-scroller": "^1.2.4",
+    "react-photoswipe": "^1.3.0",
+    "react-remarkable": "^1.1.3",
+    "react-transition-group": "^2.8.0",
+    "react-websocket": "^2.0.0",
+    "redis": "^2.8.0",
+    "request": "^2.88.0",
     "scriptjs": "2.5.8",
     "serialize-javascript": "1.3.0",
-    "serve-favicon": "2.3.2",
-    "showdown": "1.6.3",
-    "source-map-support": "0.4.11",
-    "webpack": "^4.17.1",
+    "serve-favicon": "^2.5.0",
+    "showdown": "^1.6.3",
+    "source-map-support": "^0.5.12",
+    "tosicons": "^1.0.23",
+    "webpack": "^4.30.0",
     "whatwg-fetch": "2.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^9.1.3",
+    "autoprefixer": "^9.5.1",
     "babel-core": "6.22.1",
     "babel-loader": "^7.1.5",
+    "babel-plugin-import": "^1.11.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.23.0",
@@ -70,10 +75,11 @@
     "gulp-clean-css": "2.3.2",
     "gulp-concat": "2.6.1",
     "gulp-html-replace": "1.6.2",
+    "gulp-less": "^4.0.1",
     "gulp-rename": "1.2.2",
     "gulp-replace": "0.5.4",
     "gulp-sass": "3.1.0",
-    "gulp-sourcemaps": "2.4.0",
+    "gulp-sourcemaps": "2.6.5",
     "gulp-uglify": "2.0.1",
     "gulp-util": "3.0.8",
     "gulp-watch": "4.3.11",
@@ -81,10 +87,9 @@
     "jsx-loader": "0.13.2",
     "merge-stream": "1.0.1",
     "mini-css-extract-plugin": "^0.4.2",
-    "nodemon": "1.11.0",
+    "nodemon": "^1.18.11",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "react-addons-perf": "^15.4.2",
     "run-sequence": "1.2.2",
     "sass-loader": "^7.1.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
