--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "babel-preset-stage-0": "6.22.0",
     "css-loader": "^1.0.0",
     "debug": "^3.1.0",
-    "gulp": "3.9.1",
+    "gulp": "^4.0.2",
     "gulp-clean-css": "2.3.2",
     "gulp-concat": "2.6.1",
     "gulp-html-replace": "1.6.2",
